<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
	android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:orientation="vertical" >   
	
	<FrameLayout 
   		android:layout_width="fill_parent"
    	android:layout_height="wrap_content" >
   
	    <ImageView
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:src="@drawable/layout_header_small" />	
	    	
	    <TextView
	    	android:id="@+id/infotext_search"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"	    	
	    	android:layout_gravity="right|bottom"
	    	android:paddingRight="10dip"
	    	android:paddingBottom="3dip"
	    	android:textStyle="bold|italic"
	    	android:textColor="#00386b"
	    	android:text="@string/infotext_search" />
	    		
   	</FrameLayout>
    	
    <FrameLayout
    	android:id="@+id/tutorial_search"	
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent" >
   	
   		<LinearLayout
   			android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:paddingLeft="10dip"
    		android:paddingRight="10dip"
    		android:orientation="vertical" >
    		
			<TextView
		        android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:layout_gravity="center_horizontal"
		    	android:paddingTop="5dp"
		    	android:paddingBottom="5dp"
		    	android:textColor="#00386b"
		        android:text="@string/search_info" />	
		 	
		    <AutoCompleteTextView 
		    	android:id="@+id/search_edit"    	
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"/>
		            
		  	<Button
		   		android:id="@+id/btn_search"
		       	android:layout_width="fill_parent"
		      	android:layout_height="wrap_content"
		       	android:text="@string/btn_search" 
		       	android:onClick="onSearchClicked" />
		       	
		 	</LinearLayout>
		 	
		</FrameLayout>
	
</LinearLayout>